# cell2sentence

./: .gitignore  DATA.md  Makefile  README.md  pylintrc  setup.cfg  tutorial_C2S_cell_generation.ipynb
cell2sentence/: __init__.py  transforms.py
pretrained/gene_embeddings/retina/: gene_names_chick_retina.wv  gene_names_human_retina.wv  gene_names_macaque_retina.wv  gene_names_mouse_retina.wv  gene_names_zebrafish_retina.wv
pretrained/translate/retina/: gene_names_chick_to_human_retina.wv  gene_names_macaque_to_human_retina.wv  gene_names_mouse_to_human_retina.wv  gene_names_zebrafish_to_human_retina.wv
src/cell2sentence/: __init__.py  csdata.py  csmodel.py  integrations.py  prompt_formatter.py  tasks.py  transforms.py  utils.py
src/cell2sentence/prompts/: single_cell_cell_type_conditional_generation_prompts.json  single_cell_cell_type_prediction_prompts.json
src/cell2sentence/tests/: small_data_diffgenes.csv  test_csdata.py  test_csmodel.py  test_prompt_formatter.py
tutorials/: DEVEL_mapping_marrow_genes.py  RELEASE_generate_mapped_wv.py  RELEASE_pbmc_word_vectors.py  RELEASE_tutorial_translate_blood.py  RELEASE_tutorial_translate_retina.py  cross_species_translation_tutorial.py  data_integration.py  load_all_species.py  load_data_tutorial.py  load_data_vs_scanpy_annotations.py  load_multiple_datasets_tutorial.py  pbmc3k_cell_sentences.py
