[metadata]
name = cell2sentence
version = 0.0.1
author = Rahul Dhodapkar
author_email = rahul.dhodapkar@yale.edu
description = cell2sentence: create cell sentences from sequencing data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rahuldhodapkar/cell2sentence
project_urls =
    Bug Tracker = https://github.com/rahuldhodapkar/cell2sentence/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    scipy
    tqdm
    scanpy
    anndata
    sklearn
    jellyfish

[options.packages.find]
where = src